# poff

./: .envrc  default.nix  poff.cabal
cpython_fail/: README.md  default.nix  poff.cabal
cpython_fail/nix/: sources.json
cpython_fail/python/: HoffSerialize.py
cpython_fail/src/: Poff.hs
nix/: sources.json
src/: Poff.hs
